objects/Division_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>ACV_Color_Field__c</fullName>
        <description>US 3537066: Includes the name of the divisional field that has the ACV scale color conditional formatting.</description>
        <inlineHelpText>Enter the API name of the formula field that includes the division&apos;s ACV scale color conditional formatting.</inlineHelpText>
        <label>ACV Color Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Field_Name__c</fullName>
        <description>US 3537066: Includes the divisional field name for ACV Scale.</description>
        <inlineHelpText>Enter the API name of the divisional scale ACV field that should be displayed.</inlineHelpText>
        <label>ACV Field Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Chart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US-US-4880704: If checked, division custom metadata record does not appear on the pipeline or activity chart.</description>
        <label>Disable Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <description>US 3537066: Name of the division as it should be displayed on the divisional view.</description>
        <inlineHelpText>Enter the division name as it should be displayed.</inlineHelpText>
        <label>Display Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESG_Amount_Field__c</fullName>
        <label>ESG Amount Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Field_Name__c</fullName>
        <description>US 3537066: Includes the Lookup field to account manager for the division.</description>
        <inlineHelpText>Enter the API name of the field that links the divisional account manager to the account.</inlineHelpText>
        <label>Manager Field Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Color_Field__c</fullName>
        <description>US 3537066: Includes the name of the divisional field that has the nps color conditional formatting.</description>
        <inlineHelpText>Enter the API name of the formula field for the division&apos;s NPS color conditional formatting.</inlineHelpText>
        <label>NPS Color Field</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Field_Name__c</fullName>
        <description>US 3537066: Includes the divisonal field name for NPS Score.</description>
        <inlineHelpText>Enter the API name of the divisional NPS score field.</inlineHelpText>
        <label>NPS Field Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Field__c</fullName>
        <description>US-4637975: For the pipeline tab, the opportunity amount field differs for IHS divisions. The field referenced will be used in the code to calculate opportunity amount for pipeline chart.</description>
        <label>Opportunity Amount Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>US 3537066: Indicates the order in which each division should appear.</description>
        <inlineHelpText>Enter the order number. The number controls where the divisional card is displayed in ascending order.</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <description>US 3537066: Salesforce organization ID of the division.</description>
        <inlineHelpText>Enter the division&apos;s Salesforce organization ID.</inlineHelpText>
        <label>Org ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Record_ID_Field_Name__c</fullName>
        <label>Salesforce Record ID Field Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Color__c</fullName>
        <description>US 3537066: Includes the color for the divisional stack.</description>
        <inlineHelpText>Enter the hex code for the stack. Ex: FF0000.</inlineHelpText>
        <label>Stack Color</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Division Settings</label>
    <pluralLabel>Division Settings</pluralLabel>
    <validationRules>
        <fullName>Division_Order_Greaterthan_Zero</fullName>
        <active>true</active>
        <errorConditionFormula>Order__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Order__c</errorDisplayField>
        <errorMessage>Please enter order value greater than 0.</errorMessage>
    </validationRules>
</CustomObject>